file override handling added